--- a/Assets/Resources/Config/EnemyConfig.json
+++ b/Assets/Resources/Config/EnemyConfig.json
@@ -1,6 +1,7 @@
 {
   //面数（对象）->每面的敌机（数组）->每波的敌机（数组）->具体敌机配置（对象）
   "stage1_1": [
+    //0
     [
       {
         "enemyType": "1",
@@ -102,7 +103,7 @@
 
       {
         "enemyType": "1",
-        "delay": 0.5,
+        "delay": 6,
         "bornPos": "3.48,-4.96",
         "path": "3.1,-2.5#2.3,0.9#1.8,4.0|-1,2#-1,-7",
         "pauseTime": 5,
@@ -115,7 +116,8 @@
       }
     ],
 
-    [ //1
+    //1
+    [
       {
         "enemyType": "9",
         "delay": 5,
@@ -146,7 +148,7 @@
 
       {
         "enemyType": "9",
-        "delay": 9,
+        "delay": 7,
         "bornPos": "1,5",
         "path": "1,-6",
         "pauseTime": 0,
@@ -161,8 +163,8 @@
       {
         "enemyType": "9",
         "delay": 0,
-        "bornPos": "-3,5",
-        "path": "-3,-6",
+        "bornPos": "-3.6,5",
+        "path": "-3.6,-6",
         "pauseTime": 0,
         "pathDurUP": 1,
         "pathDurDown": 10,
@@ -175,8 +177,78 @@
       {
         "enemyType": "9",
         "delay": 5,
+        "bornPos": "1.7,5",
+        "path": "1.7,-6",
+        "pauseTime": 0,
+        "pathDurUP": 1,
+        "pathDurDown": 10,
+        "emitterName": "0",
+        "hp": 200,
+        "pCount": 3,
+        "pointCount": 3
+      },
+
+      {
+        "enemyType": "9",
+        "delay": 3,
+        "bornPos": "-1,5",
+        "path": "-1,-6",
+        "pauseTime": 0,
+        "pathDurUP": 1,
+        "pathDurDown": 10,
+        "emitterName": "0",
+        "hp": 300,
+        "pCount": 3,
+        "pointCount": 3
+      },
+
+      {
+        "enemyType": "9",
+        "delay": 0,
+        "bornPos": "-2.8,5",
+        "path": "-2.8,-6",
+        "pauseTime": 0,
+        "pathDurUP": 1,
+        "pathDurDown": 10,
+        "emitterName": "0",
+        "hp": 200,
+        "pCount": 3,
+        "pointCount": 3
+      },
+
+      {
+        "enemyType": "9",
+        "delay": 3,
         "bornPos": "1,5",
         "path": "1,-6",
+        "pauseTime": 0,
+        "pathDurUP": 1,
+        "pathDurDown": 10,
+        "emitterName": "0",
+        "hp": 200,
+        "pCount": 3,
+        "pointCount": 3
+      },
+
+      {
+        "enemyType": "9",
+        "delay": 0,
+        "bornPos": "-3.6,5",
+        "path": "-3.6,-6",
+        "pauseTime": 0,
+        "pathDurUP": 1,
+        "pathDurDown": 10,
+        "emitterName": "0",
+        "hp": 200,
+        "pCount": 3,
+        "pointCount": 3
+      },
+
+      {
+        "enemyType": "9",
+        "delay": 8,
+        "bornPos": "1.7,5",
+        "path": "1.7,-6",
         "pauseTime": 0,
         "pathDurUP": 1,
         "pathDurDown": 10,
@@ -187,7 +259,8 @@
       }
     ],
 
-    [ //2
+    //2
+    [
       {
         "enemyType": "5",
         "delay": 0,
@@ -246,7 +319,7 @@
 
       {
         "enemyType": "5",
-        "delay": 0,
+        "delay": 9.5,
         "bornPos": "-2.6,5.1",
         "path": "-2.6,3#4,1",
         "pauseTime": 0,
@@ -259,7 +332,8 @@
       }
     ],
 
-    [ //3
+    //3
+    [
       {
         "enemyType": "6",
         "delay": 0,
@@ -318,7 +392,7 @@
 
       {
         "enemyType": "6",
-        "delay": 0,
+        "delay": 7,
         "bornPos": "2,5.5",
         "path": "2,1.3|3.8,-1",
         "pauseTime": 4,
@@ -331,7 +405,8 @@
       }
     ],
 
-    [ //4
+    //4
+    [ 
       {
         "enemyType": "6",
         "delay": 0,
@@ -390,7 +465,7 @@
 
       {
         "enemyType": "6",
-        "delay": 0,
+        "delay": 7,
         "bornPos": "-4,5.5",
         "path": "-4,1.3|-5.2,-1",
         "pauseTime": 4,
@@ -403,7 +478,8 @@
       }
     ],
 
-    [ //5
+    //5
+    [ 
       {
         "enemyType": "7",
         "delay": 0,
@@ -413,14 +489,14 @@
         "pathDurUP": 1,
         "pathDurDown": 3,
         "emitterName": "1",
-        "hp": 150,
-        "pCount": 3,
-        "pointCount": 2
+        "hp": 350,
+        "pCount": 4,
+        "pointCount": 3
       },
 
       {
         "enemyType": "8",
-        "delay": 0,
+        "delay": 12,
         "bornPos": "1.6,5.5",
         "path": "1.6,2.7|3.6,1",
         "pauseTime": 10,
@@ -433,7 +509,8 @@
       }
     ],
 
-    [ //6
+    //6
+    [ 
       {
         "enemyType": "7",
         "delay": 0,
@@ -450,7 +527,7 @@
 
       {
         "enemyType": "8",
-        "delay": 0,
+        "delay": 7,
         "bornPos": "0.4,5.5",
         "path": "0.4,2.7#-5.5,1",
         "pauseTime": 0,
@@ -607,7 +684,7 @@
 
       {
         "enemyType": "4",
-        "delay": 0.3,
+        "delay": 2,
         "bornPos": "-5.3,2.8",
         "path": "3.7,2.8",
         "pauseTime": 0,
@@ -638,10 +715,10 @@
 
       {
         "enemyType": "5",
-        "delay": 1,
+        "delay": 5.5,
         "bornPos": "1.6,5.2",
         "path": "1.6,2.2#-5.6,0",
-        "pauseTime": 0,
+        "pauseTime": 5,
         "pathDurUP": 0.8,
         "pathDurDown": 6,
         "emitterName": "0",
@@ -781,7 +858,7 @@
 
       {
         "enemyType": "2",
-        "delay": 0.15,
+        "delay": 3,
         "bornPos": "3.7,2.9",
         "path": "-5.4,2.9",
         "pauseTime": 0,
@@ -840,7 +917,7 @@
 
       {
         "enemyType": "9",
-        "delay": 0,
+        "delay": 8.5,
         "bornPos": "-5.8,2.5",
         "path": "-3.5,1.35#0.25,0.8#4.2,0.45",
         "pauseTime": 0,
@@ -871,7 +948,7 @@
 
       {
         "enemyType": "8",
-        "delay": 0,
+        "delay": 5,
         "bornPos": "-2.5,5",
         "path": "-4.2,3.1#-2,2#0.9,1.3#3.7,0.75",
         "pauseTime": 0,
@@ -1112,7 +1189,7 @@
 
       {
         "enemyType": "2",
-        "delay": 0.4,
+        "delay": 4.5,
         "bornPos": "3.75,5",
         "path": "3,3#2.35,2#1,1.3#-1.1,0.66#-5.6,0.36",
         "pauseTime": 0,
@@ -1255,7 +1332,7 @@
 
       {
         "enemyType": "4",
-        "delay": 0,
+        "delay": 7,
         "bornPos": "1.5,5",
         "path": "1.5,2.4|1.5,5",
         "pauseTime": 5,
@@ -1373,7 +1450,7 @@
         "delay": 3,
         "bornPos": "3.8,4",
         "path": "1.6,2#-1,1#-3.8,0.6#-5.6,0.3",
-        "pauseTime": 0,
+        "pauseTime": 3,
         "pathDurUP": 1,
         "pathDurDown": 3,
         "emitterName": "0",
@@ -2311,7 +2388,7 @@
 
       {
         "enemyType": "4",
-        "delay": 0.15,
+        "delay": 2.8,
         "bornPos": "3.8,4",
         "path": "1.6,2#-1,1#-3.8,0.6#-5.6,0.3",
         "pauseTime": 0,
@@ -2335,21 +2412,21 @@
         "pathDurUP": 3,
         "pathDurDown": 5,
         "emitterName": "0",
-        "hp": 230,
+        "hp": 330,
         "pCount": 3,
         "pointCount": 3
       },
 
       {
         "enemyType": "9",
-        "delay": 0,
+        "delay": 14,
         "bornPos": "-5.7,0.7",
         "path": "-4.7,2.3#-3.5,2.9#-2.4,3.1|4,3.6",
         "pauseTime": 10,
         "pathDurUP": 3,
         "pathDurDown": 5,
         "emitterName": "1",
-        "hp": 230,
+        "hp": 330,
         "pCount": 3,
         "pointCount": 3
       }
@@ -2373,7 +2450,7 @@
 
       {
         "enemyType": "9",
-        "delay": 0,
+        "delay": 5,
         "bornPos": "-5.7,0.7",
         "path": "-4.7,2.3#-3.5,2.9#-2.4,3.1#4,3.6",
         "pauseTime": 0,
@@ -2659,7 +2736,7 @@
 
       {
         "enemyType": "2",
-        "delay": 0.5,
+        "delay": 6,
         "bornPos": "3,5.1",
         "path": "-3,0.82#2.25,-2#-4.3,-5",
         "pauseTime": 0,
@@ -3166,7 +3243,7 @@
 
       {
         "enemyType": "11",
-        "delay": 0.3,
+        "delay": 4,
         "bornPos": "3.5,5",
         "path": "2.9,2.3#1.4,1.7#-1.3,0.8#-5.5,0.3",
         "pauseTime": 0,
@@ -3589,7 +3666,7 @@
 
       {
         "enemyType": "11",
-        "delay": 4.5,
+        "delay": 3,
         "bornPos": "-2.6,5",
         "path": "-11,0.85",
         "pauseTime": 0,
@@ -3664,16 +3741,16 @@
 
       {
         "enemyType": "9",
-        "delay": 0,
+        "delay": 16,
         "bornPos": "-2.9,5.3",
         "path": "-2.9,2|-5.4,0",
         "pauseTime": 14,
         "pathDurUP": 2,
         "pathDurDown": 2,
         "emitterName": "3",
-        "hp": 400,
-        "pCount": 3,
-        "pointCount": 3
+        "hp": 500,
+        "pCount": 4,
+        "pointCount": 4
       }
 
 
@@ -3725,7 +3802,7 @@
 
       {
         "enemyType": "6",
-        "delay": 0,
+        "delay": 5,
         "bornPos": "-5.5,4.9",
         "path": "-4.8,3.4#-3.6,2.4#-1,1.5#3.7,1",
         "pauseTime": 0,
@@ -3854,7 +3931,7 @@
 
       {
         "enemyType": "7",
-        "delay": 0.3,
+        "delay": 6,
         "bornPos": "3.9,0.7",
         "path": "2,1#1.3,3.8|2,4#3.6,4.3",
         "pauseTime": 5,
@@ -4109,7 +4186,7 @@
 
       {
         "enemyType": "2",
-        "delay": 0.3,
+        "delay": 6,
         "bornPos": "-5.5,2",
         "path": "-3.8,0.7#-2,1.8#-2.4,4.9",
         "pauseTime": 0,
@@ -4308,7 +4385,7 @@
 
       {
         "enemyType": "3",
-        "delay": 0.3,
+        "delay": 4,
         "bornPos": "3.8,2.8",
         "path": "-5.4,1.5",
         "pauseTime": 0,
@@ -4409,7 +4486,7 @@
 
       {
         "enemyType": "8",
-        "delay": 0.6,
+        "delay": 7,
         "bornPos": "1.8,5",
         "path": "0.9,2.6|-1.6,1#-5.3,-0.1",
         "pauseTime": 4,
@@ -4664,7 +4741,7 @@
 
       {
         "enemyType": "10",
-        "delay": 1.5,
+        "delay": 8,
         "bornPos": "-5.5,-3",
         "path": "1.7,-0.3|3.8,4",
         "pauseTime": 7,
